Fixed problem with the content sniffing.

The content sniffing loop that checks the content patterns was not
controlling the length of each pattern.

https://bugzilla.gnome.org/show_bug.cgi?id=597545